# laboratory_of_applied_robotics

./: .PathPlanningPresentation.pdf.icloud  Building The Map.docx  PathPlanningPresentation.key  README.md  ~$ilding The Map.docx
c++Files/: CMakeLists.txt  Makefile  a.out  calib_config.xml  main.cpp
c++Files/API/: main.cpp  path.h  robot_project.cpp  robot_project.h
c++Files/Headers/: Arena.hpp  Calibration_Intrinsic.hpp  Cell.hpp  Character_Recognition_Algorithm.hpp  Circle.hpp  CircularLine.hpp  Clipper.hpp  CollisionDetector.hpp  Color_Processing.hpp  CustomPolygon.hpp  Digit_Recognition.hpp  DubinPath.hpp  DubinPathFinder.hpp  ExitPoint.hpp  Geometry.hpp  Hexagon.hpp  Image_Processing.hpp  Introduction.hpp  Inverse_Perspective_Mapping.hpp  Line.hpp  Map.hpp  MissionPlanning.hpp  Obstacle.hpp  Optical_Character_Recognition.hpp  Path.hpp  PathCoordinates.hpp  PathFinder.hpp  PathPlanning.hpp  Pentagon.hpp  People.hpp  Polygon.hpp  Position.hpp  PossibleDubinPath.hpp  Rectangle.hpp  Robot.hpp  RoboticMapping.hpp  Settings.hpp  Shape.hpp  Square.hpp  StraightLine.hpp  (+3 more)
c++Files/Source/: Arena.cpp  Calibration_Intrinsic.cpp  Cell.cpp  Character_Recognition_Algorithm.cpp  Circle.cpp  CircularLine.cpp  Clipper.cpp  CollisionDetector.cpp  Color_Processing.cpp  CustomPolygon.cpp  Digit_Recognition.cpp  DubinPath.cpp  DubinPathFinder.cpp  ExitPoint.cpp  Hexagon.cpp  Image_Processing.cpp  Inverse_Perspective_Mapping.cpp  Line.cpp  Map.cpp  MissionPlanning.cpp  Obstacle.cpp  Optical_Character_Recognition.cpp  Path.cpp  PathCoordinates.cpp  PathFinder.cpp  Pentagon.cpp  (+12 more)
dubins/: CMakeLists.txt  CircularLine.hpp  Geometrie.hpp  Line.cpp  Line.hpp  Path.hpp  PathPlanning.hpp  StraightLine.hpp  main.cpp
(+903 files in other folders)
